--- a/index.html
+++ b/index.html
@@ -15,22 +15,39 @@
       margin: 0;
       padding: 0;
       font-family: 'Playfair Display', serif;
+      background: linear-gradient(45deg, #8B4513, #000080, #800000); /* Brown, Navy Blue, Maroon gradient background */
     }
 
-    h1 {
-      font-size: 2em;
-      margin-bottom: 20px;
-    }
-
-    .description {
-      font-size: 1.2em;
-      margin-top: 30px; /* Increase margin to 30px */
+    h1{
+      margin-top: 20px;
       text-align: center;
+      background-color: #000000; /* White background for the plaque */
+      color: white;
+      padding: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    }
+
+    .gallery {
+      position: relative;
+      width: 800px; /* Adjust the width as needed */
+      height: 600px; /* Adjust the height as needed */
+      background-color: #fff; /* White frame for the art */
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.3); /* Simulate frame shadow */
+      margin: 30px 0;
+    }
+
+    .frame {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      right: 10px;
+      bottom: 10px;
+      overflow: hidden;
     }
 
     .container {
-      height: 748px;
-      width: 748px;
+      height: 100%;
+      width: 100%;
       display: grid;
       background-color: black;
       grid-template-columns: 320px 198px 153px 50px;
@@ -75,13 +92,26 @@
     .grey {
       background-color: #232629;
     }
+
+    .description {
+      font-size: 1.2em;
+      margin-top: 20px;
+      text-align: center;
+      background-color: #000000; /* White background for the plaque */
+      color: white;
+      padding: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Simulate plaque shadow */
+    }
   </style>
 </head>
 
 <body>
   <h1>Computer Dreams of Mondrian</h1>
 
-  <div class="container" id="randomMondrian">
+  <div class="gallery">
+    <div class="frame">
+      <div class="container" id="randomMondrian"></div>
+    </div>
   </div>
 
   <div class="description" id="paintingDescription"></div>
